--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "oce"]
 	path = oce
 	url = https://github.com/tpaviot/oce.git
+[submodule "pcl"]
+	path = pcl
+	url = https://github.com/PointCloudLibrary/pcl.git
