load ifc geometry, isolate CMakeLists of ifcopenshell in eastbim

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,27 @@
 cmake_minimum_required(VERSION 3.0)
-project(EaSTBIM)
-include_directories(${PCL_INCLUDE_DIRS})
-link_directories(${PCL_LIBRARY_DIRS})
-add_definitions(${PCL_DEFINITIONS})
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-set(SOURCE_FILES main.cpp IO.cpp IO.h)
+project(EaSTBIM)
+
+#link pcl
+find_package(PCL 1.7 REQUIRED)
+include_directories(${PCL_INCLUDE_DIRS})
+add_definitions(${PCL_DEFINITIONS})
+link_directories(${PCL_LIBRARY_DIRS})
+
+#compile ifcparse
+file(GLOB IfcParse_Source_File ./ifcopenshell/src/ifcparse/*.cpp)
+add_library(IfcParse SHARED ${IfcParse_Source_File})
+
+#compile ifcgeom
+## Find Open CASCADE header files
+find_package(OCE REQUIRED COMPONENTS TKPrim)
+include_directories(${OCE_INCLUDE_DIRS})
+set(OCE_LIBRARIES TKernel TKMath TKBRep TKGeomBase TKGeomAlgo TKG3d TKG2d TKShHealing TKTopAlgo TKMesh TKPrim TKBool TKBO TKFillet TKSTEP TKSTEPBase TKSTEPAttr TKXSBase TKSTEP209 TKIGES TKOffset)
+file(GLOB IfcGeom_Source_File ./ifcopenshell/src/ifcgeom/*.cpp)
+add_library(IfcGeom SHARED ${IfcGeom_Source_File})
+target_link_libraries(IfcGeom IfcParse ${OCE_LIBRARIES})
+
+include_directories(./ifcopenshell/src)
+set(SOURCE_FILES main.cpp IO.cpp BIM.cpp)
 add_executable(EastBIM ${SOURCE_FILES})
-target_link_libraries(EastBIM ${PCL_LIBRARIES})
+target_link_libraries(EastBIM ${PCL_LIBRARIES} IfcParse IfcGeom TKernel TKMath TKBRep TKGeomBase TKGeomAlgo TKG3d TKG2d TKShHealing TKTopAlgo TKMesh TKPrim TKBool TKBO TKFillet)
