--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,12 @@
 [submodule "ApproxMVBB"]
 	path = ApproxMVBB
 	url = https://github.com/gabyx/ApproxMVBB.git
+[submodule "libccd"]
+	path = libccd
+	url = https://github.com/danfis/libccd.git
+[submodule "octomap"]
+	path = octomap
+	url = https://github.com/OctoMap/octomap.git
+[submodule "fcl"]
+	path = fcl
+	url = https://github.com/flexible-collision-library/fcl.git
